Created index.html and included proper Javascript libraries

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
 
-    <meta charset="UTF-8">
-    <title>ScheduleCreatorND</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" type=text/css" href="css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+        <meta charset="UTF-8">
+        <title>ScheduleCreatorND</title>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <!-- Optional theme -->
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 
-</head>
-<body>
+    </head>
+    <body>
 
-    <!-- jQuery -->
-    <script src="js/jquery-2.0.0.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- AngularJS -->
-    <script src="js/angular.min.js"></script>
-</body>
+        <div class="container-fluid">
+            <h2>ScheduleCreatorND</h2>
+        </div>
+
+        <form class="navbar-form navbar-left">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Course Number one">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+
+        <!-- jQuery -->
+        <script src="js/jquery-2.0.0.min.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- AngularJS -->
+        <script src="js/angular.min.js"></script>
+    </body>
 </html>
