--- a/src/www/index.html
+++ b/src/www/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <!-- Optional theme -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+        <!-- Custom Stylesheet -->
+        <link rel="stylesheet" type="text/css" href="css/style.css">
 
     </head>
     <body>
@@ -21,7 +23,28 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Course Number one">
+                            <input type="text" class="form-control" placeholder="First course number">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Second course number">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Third course number">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Add another class...">
                         </div>
                     </div>
                 </div>
