--- a/src/www/index.html
+++ b/src/www/index.html
@@ -18,43 +18,32 @@
             <h2>ScheduleCreatorND</h2>
         </div>
 
-        <form class="navbar-form navbar-left">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                    <form class="navbar-form navbar-left">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="First course number">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Second course number">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Third course number">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Add another class...">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+                    <div class="calendar">
+
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
 
         <!-- jQuery -->
         <script src="js/jquery-2.0.0.min.js"></script>
